--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercicio Newsletter</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <h1>Hola</h1>
+    <section class="newsletter">
+        <form action="#" class="form">
+            <h4 class="texto">Noticias y contenido exclusivo, solo para ti.</h4>
+            <h4 class="texto">Por favor, escribe tu email y se parte de nuestra lista.</h4>
+            <article class="inputs">
+                <input class="input" type="email" placeholder="Escribe tu email">
+                <input class="sus" type="submit" value="Suscríbete"> 
+            </article>
+            
+        </form>
+    </section>  
+    
 </body>
 </html>
